# testing_ros

./: CMakeLists.txt  package.xml
gazebo_env/mars_student1/: model.config  model.sdf
gazebo_env/mars_student2/: model.config  model.sdf
launch/: node.launch
msg/: array_math.msg  maths.msg  robot_data.msg  times.msg
script/: class_sevice_counter.py  math_advertise.py  math_equation_publisher.py  math_equation_subscriber.py  service_testing.py  testing_array.py  topic_publisher.py  topic_subscriber.py
src/: class_data.cpp  class_data_subscriber.cpp  data_publisher.cpp  data_subscriber.cpp
world/: mars_student1.world
